--- a/Debug/makefile
+++ b/Debug/makefile
@@ -52,6 +52,12 @@ default.size.stdout \
 OBJDUMP_LIST += \
 WF303RE.list \
 
+OBJCOPY_HEX += \
+WF303RE.hex \
+
+OBJCOPY_BIN += \
+WF303RE.bin \
+
 
 # All Target
 all: main-build
@@ -75,12 +81,22 @@ WF303RE.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+WF303RE.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "WF303RE.hex"
+	@echo 'Finished building: $@'
+	@echo ' '
+
+WF303RE.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "WF303RE.bin"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 # Other Targets
 clean:
-	-$(RM) WF303RE.elf WF303RE.list WF303RE.map default.size.stdout
+	-$(RM) WF303RE.bin WF303RE.elf WF303RE.hex WF303RE.list WF303RE.map default.size.stdout
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN)
 
 fail-specified-linker-script-missing:
 	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
